--- a/firefox/chrome/userChrome.css
+++ b/firefox/chrome/userChrome.css
@@ -2,4 +2,22 @@ tabbrowser tabpanels {
   background-color: #121212 !important;
 }
 
+/*
+ * Hide the scroll buttons at the left and right of the tab bar.  The code from the
+ * [ArchWiki][1] doesn't work (TODO: fix it) so I adapted this [user style].
+ * [1]: https://wiki.archlinux.org/index.php/Firefox_tweaks#Hiding_various_tab_buttons
+ * [2]: https://userstyles.org/styles/59499
+ */
+tabbrowser toolbarbutton[class^="scrollbutton"] .toolbarbutton-icon,
+#TabsToolbar toolbarbutton[class^="scrollbutton"] .toolbarbutton-icon
+{
+  display: none;
+}
+tabbrowser toolbarbutton[class^="scrollbutton"],
+#TabsToolbar toolbarbutton[class^="scrollbutton"]
+{
+  margin: 0px !important;
+  padding: 1px !important;
+}
+
 /* vim: set tw=90 sts=-1 sw=2 et: */
