Update start page CSS
Get rid of most of the margins to the very left and right of the page if
the viewport is narrow and limit how narrow the lists can be.

--- a/startpage/startpage.css
+++ b/startpage/startpage.css
@@ -18,7 +18,8 @@ body {
   position: absolute;
   left: 0;
   right: 0;
-  width: 85%;
+  width: 100%;
+  max-width: 1152;
   top: 50%;
   transform: translate(0, -50%);
   margin: auto;
@@ -34,7 +35,8 @@ body {
 
 .list {
   display: inline-block;
-  width: 18%;
+  width: 18.12%;
+  min-width: 208px;
   margin: 16px 8px 16px 8px;
   vertical-align: text-top;
 }
