--- a/startpage/startpage.css
+++ b/startpage/startpage.css
@@ -19,10 +19,10 @@ body {
   left: 0;
   right: 0;
   width: 100%;
-  max-width: 1152;
+  max-width: 1118px;
   top: 50%;
   transform: translate(0, -50%);
-  margin: auto;
+  margin: 0 auto 0 auto;
   text-align: center;
 }
 
@@ -35,8 +35,7 @@ body {
 
 .list {
   display: inline-block;
-  width: 18.12%;
-  min-width: 208px;
+  width: 202px;
   margin: 16px 8px 16px 8px;
   vertical-align: text-top;
 }
