--- a/firefox/chrome/userContent.css
+++ b/firefox/chrome/userContent.css
@@ -1,5 +1,7 @@
 @-moz-document url-prefix(about:blank) {
-  * { background-color: #121212; }
+  * {
+    background-color: #121212;
+  }
 }
 
 /* vim: set tw=90 sts=-1 sw=2 et: */
