--- a/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
@@ -12,32 +12,32 @@
 
   body, td, .admin td, .subtext td, input[type="submit"], .default, .admin, .title,
   .subtext, .yclinks, .pagetop, .comment, input, textarea {
-    font-family: sans-serif;
+    font-family: sans-serif !important;
   }
 
   .comhead {
-    font-family: monospace;
+    font-family: monospace !important;
   }
 
   input {
-    font-size: 8pt;
+    font-size: 8pt !important;
   }
 
   .pagetop {
-    font-size: 10pt;
+    font-size: 10pt !important;
     font-variant: small-caps;
   }
 
   .title, .comment {
-    font-size: 10pt;
+    font-size: 10pt !important;
   }
 
   .comhead {
-    font-size: 9pt;
+    font-size: 9pt !important;
   }
 
   .subtext {
-    font-size: 8pt;
+    font-size: 8pt !important;
   }
 
   tr.spacer{
