Hacker News: fix search and comment box background
Without this, they both are white.  This fix wasn't necessary when I was
using an extension (Stylish or Stylus) to style Hacker News.  See [1].
The "add comment" button is also affected by the new rule.

[1]: https://support.mozilla.org/en-US/questions/814083

--- a/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
@@ -41,6 +41,11 @@
     background-color: #121212 !important;
   }
 
+  /* See <https://support.mozilla.org/en-US/questions/814083>. */
+  input, textarea {
+    -moz-appearance: none !important;
+  }
+
   /* Bright text */
   td.title a:link, span.comment font, span.comment font a:link, u a:link,
   span.yclinks a:link, body:not([id]), td:nth-child(2):not(.subtext) > a:link, input,
