Fix some new issues with my Hacker News CSS
My modifications to the width of the main content area and to the color
of the bars at the top and bottom stopped working.  This happened when I
upgraded Firefox (Developer Edition) from version 59 to 60.  Some
`!important` always helps.

--- a/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
@@ -12,7 +12,7 @@
   }
 
   td[bgcolor="#ff6600"] {
-    background-color: #d0d0d0;
+    background-color: #d0d0d0 !important;
   }
 
   body, td, .admin td, .subtext td, input[type="submit"], .default, .admin, .title,
@@ -38,7 +38,7 @@
   }
 
   #hnmain {
-    width: initial;
+    width: auto !important;
     margin-top: 6px;
     margin-bottom: 6px;
   }
