Add a rule to userChrome.css
I think I added this rule years ago (maybe in 2018) but never committed
the change.  It still works.  It changes what color is briefly shown
when a new tab starts to load.

--- a/home/mozilla/firefox/ctontcrf.default/chrome/userChrome.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/userChrome.css
@@ -8,6 +8,11 @@ tabbrowser tabpanels {
   background-color: #121212 !important;
 }
 
+/* See <https://redd.it/91wxy3>. */
+.browserContainer {
+  background-color: #121212 !important;
+}
+
 /* Hide the scroll buttons at the left and right of the tab bar.  The code from the
  * [ArchWiki][1] doesn't work (TODO: fix it) so I adapted this [user style].
  * [1]: https://wiki.archlinux.org/index.php/Firefox_tweaks#Hiding_various_tab_buttons
