--- a/home/mozilla/firefox/ctontcrf.default/chrome/hackerNews.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/hackerNews.css
@@ -28,7 +28,7 @@
 
   /* Fix the color, font size, and line length of text posts. */
   .fatitem > tbody > tr:nth-child(4) > td:nth-child(2) {
-    color: #dfdfdf !important;
+    color: #ccc !important;
     font-size: .9167rem !important;
     max-width: 80ch !important;
   }
@@ -100,7 +100,7 @@
   }
 
   .comment {
-    line-height: 1.3;
+    line-height: 1.4;
   }
 
   .comhead {
@@ -143,7 +143,7 @@
   span.yclinks a:link, body:not([id]), td:nth-child(2):not(.subtext) > a:link, input,
   textarea, p > a, a > u, .c00, .c00 a:link,
   a[href="https://www.ycombinator.com/apply/"] {
-    color: #dfdfdf !important;
+    color: #ccc !important;
   }
 
   td.title {
