Add some CSS for Wikipedia to `userContent.css`

--- a/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
+++ b/home/mozilla/firefox/ctontcrf.default/chrome/userContent.css
@@ -5,3 +5,9 @@
     background-color: #121212;
   }
 }
+
+@-moz-document domain(wikipedia.org) {
+  h1, h2, .mw-page-title-main {
+    font-family: 'Roboto Slab' !important;
+  }
+}
